general changes, advancements on second version of pipeline

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ git+https://github.com/MediaMonitoringAndAnalysis/llm_multiprocessing_inference.
 git+https://github.com/MediaMonitoringAndAnalysis/data_generation.git
 git+https://github.com/MediaMonitoringAndAnalysis/EntryExtraction.git
 git+https://github.com/MediaMonitoringAndAnalysis/DocumentsProcessing.git
+git+https://github.com/MediaMonitoringAndAnalysis/zero-shot-classification.git
